[project]
name = "example_package_kati"
version = "0.0.2"
authors = [
  { name="KaTi", email="kati26.ai@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/KarinaTiurina/example_package_kati"
Issues = "https://github.com/KarinaTiurina/example_package_kati/issues"